welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: not found: type int
def avancer(x:int){
              ^FlowerCase:7: error: not found: type int
def reculer(x:int){
              ^